--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;"><span class="iconfont icon-tuichu"></span>退出</a>
+                    <a id="btnLogout" href="javascript:;"><span class="iconfont icon-tuichu"></span>退出</a>
                 </li>
             </ul>
         </div>
