--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree " lay-shrink="all">
                     <li class="layui-nav-item layui-this ">
-                        <a href="/home/dashboard.html " target="fm "><span class="iconfont icon-home "></span>首页</a>
+                        <a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home "></span>首页</a>
                     </li>
                     <li class="layui-nav-item ">
                         <a class=" " href="javascript:; "><span class="iconfont icon-16 "></span>文章管理</a>
@@ -60,9 +60,9 @@
                     <li class="layui-nav-item ">
                         <a href="javascript:; "><span class="iconfont icon-user "></span>个人中心</a>
                         <dl class="layui-nav-child ">
-                            <dd><a href="javascript:; "><i class="layui-icon layui-icon-app "></i>基本资料</a></dd>
-                            <dd><a href="javascript:; "><i class="layui-icon layui-icon-app "></i>更换头像</a></dd>
-                            <dd><a href="javascript:; "><i class="layui-icon layui-icon-app "></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app "></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app "></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app "></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -71,7 +71,7 @@
 
         <div class="layui-body ">
             <!-- 内容主体区域 -->
-            <iframe name="fm " src="/home/dashboard.html " frameborder="0 "></iframe>
+            <iframe name="fm" src="/home/dashboard.html " frameborder="0 "></iframe>
         </div>
 
         <div class="layui-footer ">
