--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -37,14 +37,16 @@
             </div>
             <!-- 第二行的按钮区域 -->
             <div class="row2">
-                <button type="button" class="layui-btn">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger">确定</button>
+                <!-- accept 设置可上传的文件类型 -->
+                <input type="file" id="file" accept="image/png,image/jpeg">
+                <button type="button" class="layui-btn" id="btnChooseImage">上传</button>
+                <button type="button" id="btnUpload" class="layui-btn layui-btn-danger">确定</button>
             </div>
         </div>
     </div>
 
     <!-- 引入layui 的 js -->
-    <script src="/assets/lib/layui/layui.all.js "></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 引入jQuery -->
     <script src="/assets/lib/jquery.js"></script>
     <!-- 引入baseAPI -->
